--- a/app/Resources/views/course-manage/student/index.html.twig
+++ b/app/Resources/views/course-manage/student/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'course-manage/layout.html.twig' %}
 
 {% block title %}{{ 'course.members_manage'|trans }} - {{ course.title }} - {{ parent() }}{% endblock %}
-{% do script(['app/js/course-manage/students/index.js']) %}
+{% do script(['app/js/course-manage/students/index.js', 'vue3/js/course-manage/students/index.js']) %}
 {% set course_side_nav = 'students' %}
 {% block main_heading_class %}course-main-header{% endblock %}
 {% block main_heading %}
@@ -86,5 +86,35 @@
     <nav class="text-center">
       {{ web_macro.advanced_paginator(paginator) }}
     </nav>
+  </div>
+{% endblock %}
+
+{% block main %}
+  <div style="margin-left: 200px; padding: 20px 32px 0 32px;">
+    {{ web_macro.flash_messages() }}
+    <div id="student-list-app"
+         data-course-id="{{ course.id }}"
+         data-course-set-id="{{ course.courseSetId }}"
+         data-course-status="{{ course.status }}"
+         data-is-normal-course="{{ courseSet.parentId == 0 }}"
+         data-enable-add-and-remove="{{ isEnableAddAndRemove }}"
+         data-enable-export="{{ enableExport }}"
+    ></div>
+  </div>
+
+  <div id="export-modal" class="hide">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+          <h4 class="modal-title" data-success="{{ 'file.download.finish'|trans }}">{{ 'file.download.start'|trans }}</h4>
+        </div>
+        <div class="modal-body">
+          <div class="progress progress-striped active">
+            <div id="progress-bar" class="progress-bar progress-bar-success" style="width: 0"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 {% endblock %}
