--- a/app/Resources/views/classroom-manage/index.html.twig
+++ b/app/Resources/views/classroom-manage/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'classroom-manage/layout.html.twig' %}
 
+{% do css(['app/css/main-ant.css']) %}
 {% block title %}{{ setting('classroom.name')|default("site.default.classroom"|trans) }}{{ 'classroom.manage'|trans }} - {{ parent() }}{% endblock %}
 {% do script(['libs/es-ckeditor/ckeditor.js','libs/select2.js', 'libs/vue.js', 'app/js/classroom-manage/base-setting/index.js']) %}
 
