--- a/app/Resources/views/item-bank-exercise-manage/student-manage/index.html.twig
+++ b/app/Resources/views/item-bank-exercise-manage/student-manage/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'item-bank-exercise-manage/exercise-set/layout.html.twig' %}
 
 {% block title %}{{'course.members_manage'|trans}} - {{ exercise.title }} - {{ parent() }}{% endblock %}
-{% do script(['app/js/item-bank-exercise/students/manage/index.js']) %}
+{% do script(['app/js/item-bank-exercise/students/manage/index.js', 'vue3/js/item-bank-exercise-manage/student-manage/index.js']) %}
 {% set course_side_nav = 'students' %}
 {% block main_heading_class %}course-main-header{% endblock %}
 {% block main_heading %}
@@ -73,6 +73,33 @@
     <nav class="text-center">
       {{ web_macro.paginator(paginator) }}
     </nav>
+  </div>
+{% endblock %}
+
+{% block main %}
+  <div style="margin-left: 200px; padding: 20px 32px 0 32px;">
+    {{ web_macro.flash_messages() }}
+    <div id="student-list-app"
+         data-exercise-id="{{ exercise.id }}"
+         data-enable-add-and-remove="{{ app.user.isAdmin() or setting('course.teacher_manage_student', 0) }}"
+         data-enable-export="{{ app.user.isAdmin() or setting('course.teacher_export_student', false) }}"
+    ></div>
+  </div>
+
+  <div id="export-modal" class="hide">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+          <h4 class="modal-title" data-success="{{ 'file.download.finish'|trans }}">{{ 'file.download.start'|trans }}</h4>
+        </div>
+        <div class="modal-body">
+          <div class="progress progress-striped active">
+            <div id="progress-bar" class="progress-bar progress-bar-success" style="width: 0"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 {% endblock %}
 
