feat: #20241106 refactor order item bank

--- a/app/Resources/views/order/show/coupon-item.html.twig
+++ b/app/Resources/views/order/show/coupon-item.html.twig
@@ -1,4 +1,4 @@
-{% do script(['app/js/order/coupon-item/index.js', 'vue3/js/order/index.js']) %}
+{% do script(['app/js/order/coupon-item/index.js', 'vue3/js/order/item-bank/index.js']) %}
 
 <div id="item-bank-gift"
   data-exercise-bind="{{ exerciseBind|json_encode }}"
