feat: #105885 直播课件支持从资料库中选择ppt

--- a/app/Resources/views/file-chooser/parts/course-file-choose.html.twig
+++ b/app/Resources/views/file-chooser/parts/course-file-choose.html.twig
@@ -12,7 +12,7 @@
 </div>
 
 <div class="js-course-file-search-form">
-  <input type="hidden" name="type" value="{{ fileType|default('') }}">
+  <input type="hidden" name="types" value="{{ fileTypes|default('') }}">
   <input type="hidden" name="keyword" value="">
   <input type="hidden" name="page" value="1">
   <input type="hidden" name="activityType" value="{{ mediaType|default('') }}">
