feat: #20241111 修复样式缺失

--- a/app/Resources/views/item-bank-css-loader.html.twig
+++ b/app/Resources/views/item-bank-css-loader.html.twig
@@ -5,3 +5,4 @@
   <link href="{{ asset('static-dist/app/css/item-bank.css') }}" rel="stylesheet" />
   <link href="{{ asset('static-dist/app/css/item-bank-antdv.css') }}" rel="stylesheet" />
 {% endif %}
+<link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
