--- a/app/Resources/views/classroom-manage/testpaper/index.html.twig
+++ b/app/Resources/views/classroom-manage/testpaper/index.html.twig
@@ -4,6 +4,7 @@
 {% set side_nav = 'testpaper-check' %}
 
 {% do script(['libs/vue.js', 'app/js/course-manage/testpaper-check/index.js']) %}
+{% do css(['app/css/main-ant.css']) %}
 
 {% block main %}
 <div class="panel panel-default panel-col">
