--- a/app/Resources/views/course-manage/testpaper-check/check-list.html.twig
+++ b/app/Resources/views/course-manage/testpaper-check/check-list.html.twig
@@ -4,6 +4,7 @@
 {% set course_side_nav = 'testpaper-check' %}
 
 {% do script(['libs/vue.js', 'app/js/course-manage/testpaper-check/index.js']) %}
+{% do css(['app/css/main-ant.css']) %}
 
 {% block main_heading %}
   <div class="cd-main__title">
