--- a/app/Resources/views/classroom-manage/testpaper/index.html.twig
+++ b/app/Resources/views/classroom-manage/testpaper/index.html.twig
@@ -7,7 +7,7 @@
 {% do css(['app/css/main-ant.css']) %}
 
 {% block main %}
-<div class="panel panel-default panel-col">
+<div class="panel panel-default panel-col" style="border: 0">
   <div class="classroom-testpaper">
     {{'classroom.my_check'|trans}}
     <div class="testpaper-check-title">
