--- a/app/Resources/views/classroom-manage/wrong-question/index.html.twig
+++ b/app/Resources/views/classroom-manage/wrong-question/index.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block main %}
-  <div class="panel panel-default panel-col">
+  <div class="panel panel-default panel-col" style="border: 0">
     <div class="panel-heading">{{'学员错题'|trans}}</div>
     <div class="panel-body">
       <input type="hidden" class="js-classroom-id" value="{{ classroom.id }}" />
