feat: #107892 下载资料预览按钮兼容响应式

--- a/app/Resources/static-src/app/less/page/course-learn/download.less
+++ b/app/Resources/static-src/app/less/page/course-learn/download.less
@@ -43,6 +43,7 @@
 
     .materials-content {
       width: 100%;
+      min-width: 0;
       display: flex;
       justify-content: space-between;
 
@@ -66,6 +67,7 @@
         display: flex;
         align-items: center;
         gap: 12px;
+        flex-shrink: 0;
       }
 
       .download-materials-btn {
