--- a/web/activities/download/resources/views/show.html.twig
+++ b/web/activities/download/resources/views/show.html.twig
@@ -12,7 +12,7 @@
         <div class="download-materials-item">
           <img class="materials-icon" src="{{ asset(get_file_ext_icon_Path(file.ext)) }}" alt="">
           <div class="materials-content">
-            <div>
+            <div style="min-width: 0;">
               <p class="materials-content__title text-overflow">{{ material.title }}</p>
               <p class="materials-content__desc">
                 {{ material.description|default('') }}
