--- a/app/Resources/views/admin-v2/operating/certificate-record/index.html.twig
+++ b/app/Resources/views/admin-v2/operating/certificate-record/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin-v2/layout.html.twig' %}
 
-{% do script(['app/js/admin-v2/operating/certificate-record/manage/index.js']) %}
+{% do script(['app/js/admin-v2/operating/certificate-record/manage/index.js', 'app/js/exporter/index.js']) %}
 
 {% set menu = 'admin_v2_certificate_manage' %}
 
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-  <form class="well well-sm form-inline" method="get">
+  <form id="search-form" class="well well-sm form-inline" method="get">
     <div class="form-group">
       <label>{{ 'admin.operation_certificate.certificate.record.status'|trans }}:</label>
       <select class="form-control" name="status">
@@ -26,7 +26,19 @@
     <div class="form-group mll">
       <input class="form-control" name="keyword" type="text" placeholder="{{'form.placeholder.keyword'|trans}}" value="{{ app.request.query.get('keyword') }}">
     </div>
+    <input type="hidden" name="certificateId" value="{{ certificate.id }}">
     <button class="btn btn-primary" type="submit">{{'form.btn.search'|trans}}</button>
+    <a class="btn btn-primary mhs js-export-btn"
+       href="javascript:;"
+       data-try-url="{{ path('try_export', {name: 'certificate-records'}) }}"
+       data-pre-url="{{ path('pre_export', {name: 'certificate-records'}) }}"
+       data-url="{{ path('export', {name: 'certificate-records', customFileName: ''}) }}"
+       data-loading-text="{{ 'form.btn.export.submiting'|trans }}"
+       data-target-form="#search-form"
+    >
+      {{ 'form.btn.export_search_result'|trans }}
+    </a>
+    {% include 'export/export-modal.html.twig' %}
   </form>
 
   <table class="table table-hover table-striped" id="record-table">
