--- a/app/Resources/views/testpaper/manage/result-list-search-form.html.twig
+++ b/app/Resources/views/testpaper/manage/result-list-search-form.html.twig
@@ -5,18 +5,21 @@
 
 <form class="clearfix form-inline well well-sm testpaper-result-list-form" method="get">
   <div class="form-group">
-    <input class="form-control " type="text" placeholder="{{'my.teaching.open_course.student_setting.enter_user_name'|trans}}" name="keyword" value="{{ keyword}}">
+    <input class="form-control" type="text" placeholder="{{ 'my.teaching.open_course.student_setting.enter_user_name'|trans }}" name="keyword" value="{{ keyword }}">
   </div>
   <div class="form-group">
-    <select name="status" class="form-control" >
-      <option value="all" {% if status == 'all' %}selected='selected'{% endif %}>{{'course.reviews.all_catagory'|trans}}</option>>
-      <option value="finished" {% if status == 'finished' %} selected='selected'{% endif %}>{{'site.default.reviewing'|trans}}</option>
-      <option value="reviewing" {% if status == 'reviewing' %} selected='selected'{% endif %}>{{'site.default.unreviewing'|trans}}</option>
-      <option value="doing" {% if status == 'doing' %} selected='selected'{% endif %}>{{'site.default.doing'|trans}}</option>
+    <select name="status" class="form-control">
+      <option value="all" {% if status == 'all' %}selected='selected'{% endif %}>{{ 'course.reviews.all_catagory'|trans }}</option>>
+      <option value="finished" {% if status == 'finished' %} selected='selected'{% endif %}>{{ 'site.default.reviewing'|trans }}</option>
+      <option value="reviewing" {% if status == 'reviewing' %} selected='selected'{% endif %}>{{ 'site.default.unreviewing'|trans }}</option>
+      <option value="doing" {% if status == 'doing' %} selected='selected'{% endif %}>{{ 'site.default.doing'|trans }}</option>
     </select>
   </div>
 
-  <button class="cd-btn cd-btn-primary">{{'form.btn.search'|trans}}</button>
-  <button class="btn btn-default" id="export-students-transcript" {% if answerRecords|length <= 0 %}disabled{% endif %} data-loading-text="{{'classroom.student_exporting'|trans}}" data-url="{{ path('course_testpaper_transcript_export', {'courseId':activity.fromCourseId, 'testpaperId':assessment.id, 'activityId':activity.id }) }}" data-data-url="{{ path('course_testpaper_transcript_export_data', {'courseId':activity.fromCourseId, 'testpaperId':assessment.id, 'activityId':activity.id }) }}">{{'course.testpaper_export.btn'|trans}}</button>
+  <button class="cd-btn cd-btn-primary">{{ 'form.btn.search'|trans }}</button>
+  <a class="btn btn-default" id="export-students-transcript" {% if answerRecords|length <= 0 %}disabled{% endif %}
+     data-loading-text="{{ 'classroom.student_exporting'|trans }}"
+     data-url="{{ path('course_testpaper_transcript_export', {'courseId':activity.fromCourseId, 'testpaperId':assessment.id, 'activityId':activity.id }) }}"
+     data-data-url="{{ path('course_testpaper_transcript_export_data', {'courseId':activity.fromCourseId, 'testpaperId':assessment.id, 'activityId':activity.id }) }}">{{ 'course.testpaper_export.btn'|trans }}</a>
 
 </form>
