--- a/app/Resources/views/answer-engine/answer.html.twig
+++ b/app/Resources/views/answer-engine/answer.html.twig
@@ -4,7 +4,13 @@
 
 {% block stylesheets %}
   {{ parent() }}
-  {% include 'item-bank-css-loader.html.twig' %}
+  {% if maincolor != 'default' and setting('theme.code', 'jianmo') == 'jianmo' %}
+    <link href="{{ asset('static-dist/app/css/item-bank-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
+    <link href="{{ asset('static-dist/app/css/item-bank-antdv-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
+  {% else %}
+    <link href="{{ asset('static-dist/app/css/item-bank.css') }}" rel="stylesheet" />
+    <link href="{{ asset('static-dist/app/css/item-bank-antdv.css') }}" rel="stylesheet" />
+  {% endif %}
 {% endblock %}
 
 {% block body %}
