feat: #20241114 修复签署合同和考试样式冲突问题

--- a/app/Resources/views/answer-engine/answer.html.twig
+++ b/app/Resources/views/answer-engine/answer.html.twig
@@ -4,13 +4,7 @@
 
 {% block stylesheets %}
   {{ parent() }}
-  {% if maincolor != 'default' and setting('theme.code', 'jianmo') == 'jianmo' %}
-    <link href="{{ asset('static-dist/app/css/item-bank-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
-    <link href="{{ asset('static-dist/app/css/item-bank-antdv-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
-  {% else %}
-    <link href="{{ asset('static-dist/app/css/item-bank.css') }}" rel="stylesheet" />
-    <link href="{{ asset('static-dist/app/css/item-bank-antdv.css') }}" rel="stylesheet" />
-  {% endif %}
+  {% include 'item-bank-css-loader.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -37,6 +31,15 @@
     <input type="hidden" name="target-title" value="{{ contract.targetTitle}}">
     <input type="hidden" name="nickname" value="{{ contract.nickname}}">
   {% endif %}
+  {% block sign_contract_modal_styles %}
+    {% if maincolor != 'default' and setting('theme.code', 'jianmo') == 'jianmo' %}
+      <link href="{{ asset('static-dist/app/css/item-bank-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
+      <link href="{{ asset('static-dist/app/css/item-bank-antdv-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
+    {% else %}
+      <link href="{{ asset('static-dist/app/css/item-bank.css') }}" rel="stylesheet" />
+      <link href="{{ asset('static-dist/app/css/item-bank-antdv.css') }}" rel="stylesheet" />
+    {% endif %}
+  {% endblock %}
   {% if contract.sign|default('') != 'no' %}
     <div id="sign-contract-modal"></div>
   {% endif %}
