--- a/app/Resources/views/classroom-manage/assistants.html.twig
+++ b/app/Resources/views/classroom-manage/assistants.html.twig
@@ -4,7 +4,7 @@
 {% do script(['app/js/classroom-manage/set-assistants/index.js']) %}
 
 {% block main %}
-<div class="panel panel-default panel-col">
+<div class="panel panel-default panel-col" style="border: 0">
   <div class="panel-heading">{{'classroom.set_assistant'|trans}}</div>
   <div class="panel-body">
     <form id="teachers-form" class="form-horizontal" method="post">
@@ -15,12 +15,12 @@
           {% set url = path('classroom_assistants_match', {classroomId:classroom.id}) %}
           <div id="classroom-manage-set-assistant" data-url = {{url}} data-assistants = {{ assistants|json_encode }}></div>
           <div class="help-block">{{ 'classroom.set_assistant_tip'|trans }}</div>
-        </div>  
+        </div>
       </div>
       <div class="form-group">
         <div class="col-md-offset-2 col-md-8 controls">
           <button type="submit" class="btn btn-fat btn-primary">{{'form.btn.save'|trans}}</button>
-        </div>  
+        </div>
       </div>
       <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
     </form>
