--- a/app/Resources/views/classroom-manage/sign/index.html.twig
+++ b/app/Resources/views/classroom-manage/sign/index.html.twig
@@ -7,7 +7,7 @@
 {% set side_nav = 'sign-statistics' %}
 
 {% block main %}
-  <div class="panel panel-default">
+  <div class="panel panel-default" style="border: 0">
     <div class="panel-heading">{{'classroom.manage.sign_statictics'|trans}}
     </div>
     <div class="panel-body">
