--- a/app/Resources/views/classroom-manage/statistics.html.twig
+++ b/app/Resources/views/classroom-manage/statistics.html.twig
@@ -4,7 +4,7 @@
 {% do script(['libs/echarts.js', 'app/js/classroom-manage/statistics/index.js']) %}
 
 {% block main %}
-  <div class="panel panel-default">
+  <div class="panel panel-default" style="border: 0">
     <div class="panel-heading">{{'classroom.manage.data_statictics'|trans}}
     </div>
     <div class="panel-body">
