feat: #20241119 完善表格校验

--- a/vue3/main.less
+++ b/vue3/main.less
@@ -74,3 +74,17 @@ a {
 .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panel table th {
   text-align: center !important;
 }
+
+.ant-form-item-label {
+  label {
+    margin-bottom: 0;
+  }
+}
+
+.ant-radio-wrapper {
+  font-weight: 400;
+}
+
+.ant-checkbox-wrapper {
+  font-weight: 400;
+}
