--- a/vue3/main.less
+++ b/vue3/main.less
@@ -88,3 +88,22 @@ a {
 .ant-checkbox-wrapper {
   font-weight: 400;
 }
+
+.cke_chrome {
+  border-color: #d9d9d9 !important;
+  border-radius: 4px;
+}
+.cke_inner {
+  border-color: #d9d9d9 !important;
+  border-radius: 4px !important;
+}
+.cke_top {
+  border-color: #d9d9d9 !important;
+  border-top-left-radius: 4px !important;
+  border-top-right-radius: 4px !important;
+}
+.cke_contents {
+  border-color: #d9d9d9 !important;
+  border-bottom-left-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+}
