--- a/app/Resources/views/material-lib/web/preview-modal.html.twig
+++ b/app/Resources/views/material-lib/web/preview-modal.html.twig
@@ -16,7 +16,7 @@
     {% else %}
       <div id="material-preview-player"
           style="height:500px;overflow:hidden;"
-          data-url="{{path('material_lib_file_player', {fileId: file.id})}}"
+           data-url="{{ path('material_lib_file_player', {fileId: file.id, token: token|default()}) }}"
       ></div>
     {% endif %}
   {% else %}
