--- a/app/Resources/views/course-manage/item-bank.html.twig
+++ b/app/Resources/views/course-manage/item-bank.html.twig
@@ -1,5 +1,6 @@
 {% extends 'course-manage/layout.html.twig' %}
 
+{% block title %}{{ 'course.item_bank_manage'|trans }} - {{ course.title }} - {{ parent() }}{% endblock %}
 {% set course_side_nav = 'item-bank' %}
 
 {% do script(['vue3/js/course-manage/item-bank/index.js']) %}
