--- a/vue3/main.less
+++ b/vue3/main.less
@@ -74,3 +74,13 @@ a {
 .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panel table th {
   text-align: center !important;
 }
+
+.ant-form-item {
+  .ant-form-item-label {
+    > label {
+      font-weight: 400;
+      color: rgba(0, 0, 0, 0.88);
+      margin-bottom: 0;
+    }
+  }
+}
