--- a/app/Resources/views/open-course-manage/base-info.html.twig
+++ b/app/Resources/views/open-course-manage/base-info.html.twig
@@ -7,7 +7,7 @@
 categoryUrl: path('category_all'),
 tagMatchUrl: path('tag_match')
 } %}
-{% do script(['libs/es-ckeditor/ckeditor.js','libs/bootstrap-datetimepicker.js','libs/jquery-validation.js', 'libs/select2.js','libs/bootstrap-datetimepicker.js', 'app/js/open-course-manage/base/index.js'])%}
+{% do script(['libs/es-ckeditor/ckeditor.js', 'libs/jquery-validation.js', 'libs/select2.js', 'app/js/open-course-manage/base/index.js'])%}
 {% block paddingClass %}course-manage-body course-manage-info{% endblock %}
 {% block main_heading_class %} course-manage-info__title {% endblock %}
 
@@ -17,7 +17,7 @@ tagMatchUrl: path('tag_match')
 
 {% block main_body %}
   <div class="course-manage-subltitle cd-mb40">{{ 'my.teaching.open_course.Basic_Info'|trans }}</div>
-  <form class="form-horizontal" id="course-form" method="post" data-update = "{{ canUpdateStartTime }}">
+  <form class="form-horizontal" id="course-form" method="post">
 
     <div class="form-group">
       <div class="col-md-2 control-label"><label class="control-label-required" for="course_title">{{ 'my.teaching.open_course.Basic_Info.title'|trans }}</label></div>
@@ -74,54 +74,6 @@ tagMatchUrl: path('tag_match')
         <div class="help-block cd-text-sm">{{ 'my.teaching.open_course.Basic_Info.about.help_block'|trans }}</div>
       </div>
     </div>
-
-    {% if course.type == 'liveOpen' %}
-    <div class="course-manage-subltitle cd-mb40">{{ 'my.teaching.open_course.liveTimeSet.title'|trans }}</div>
-
-      <div class="form-group start-form-group cd-mb8">
-        <label class="col-md-2 control-label" for="live-startTime">{{'my.teaching.open_course.liveTimeSet.start_time'|trans}}</label>
-        <div class="col-md-8 controls" style="z-index:2000;">
-          <input type="text" id="live-startTime"  name="startTime" class="form-control width-input width-input-large" autocomplete="off" value="{% if openLiveLesson %}{{ openLiveLesson.startTime|date('Y-m-d H:i:s') }}{% endif %}" data-url="{{ path('client_time_check') }}">
-          <div class="help-block cd-text-sm js-time-help-tip">
-            {{'my.teaching.open_course.liveTimeSet.start_time.help_block'|trans}}
-          </div>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label class="col-md-2 control-label" for="live-length-field">{{'my.teaching.open_course.liveTimeSet.live_length'|trans}}</label>
-        <div class="col-md-8 controls">
-          <input type="text" name="timeLength" id="live-length-field" class="form-control width-input width-input-large" value="{{ openLiveLesson.length|default(60) }}" placeholder="{{'my.teaching.open_course.liveTimeSet.live_length.placeholer'|trans}}" data-calculate-left-capacity-url="" data-max-Student-Num = ""  data-url="
-          {% spaceless %}
-            {% if openLiveLesson|default(null) %}
-              {{path('live_open_lesson_time_check',{courseId:course.id,lessonId:openLiveLesson.id}) }}
-            {% else %}
-              {{path('live_open_lesson_time_check',{courseId:course.id})}}
-            {% endif %}
-          {% endspaceless %}">
-          <span class="cd-dark-minor cd-ml8 cd-text-medium">{{'my.teaching.open_course.liveTimeSet.live_length.minute'|trans}}</span>
-          <div class="help-block cd-text-sm js-time-help-tip"></div>
-        </div>
-
-        <input type="hidden" id="live_lesson_time_check" data-url="{% if openLiveLesson|default(null) %}{{path('live_open_lesson_time_check',{courseId:course.id,lessonId:openLiveLesson.id}) }}{% else %}{{path('live_open_lesson_time_check',{courseId:course.id})}}{% endif %}" />
-      </div>
-      <div class="course-manage-subltitle cd-mb40">{{ 'my.teaching.open_course.live_replay.set'|trans }}</div>
-      <div class="form-group start-form-group cd-mb8">
-        <label class="col-md-2 control-label" for="replayEnable">{{'my.teaching.open_course.live_replay.is_permission'|trans}}</label>
-        <div class="col-md-8 controls radios" style="z-index:2000;">
-          <label>
-            <input type="radio" name="replayEnable" value="1" {% if course.replayEnable|default(0) %}checked{% endif %}>
-            {{'admin.setting_course.allow'|trans}}
-          </label>
-          <label>
-            <input type="radio" name="replayEnable" value="0" {% if course.replayEnable|default(0) == 0 %}checked{% endif %}>
-            {{'admin.setting_course.not_allow'|trans}}
-          </label>
-        </div>
-      </div>
-
-    {% endif %}
-
 
     <div class="form-group">
       <div class="col-md-offset-2 col-md-8 controls">
