fix: #103379 修复课程简介前后端显示一致

--- a/app/Resources/views/classroom/explore.html.twig
+++ b/app/Resources/views/classroom/explore.html.twig
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% do script(['app/js/classroom/explore/index.js']) %}
+{% do css(['app/css/main-vant.css']) %}
 
 {% block top_content %}
 
