feat: #20241129 完成添加直播接口

--- a/app/Resources/views/open-course-manage/lessons.html.twig
+++ b/app/Resources/views/open-course-manage/lessons.html.twig
@@ -7,5 +7,5 @@
 {% do script(['vue3/js/open-course-manage/lessons-manage/index.js']) %}
 
 {% block main %}
-  <div id="lessons-manage" data-course="{{ course }}" style="margin-left: 200px"></div>
+  <div id="lessons-manage" data-course="{{ course | json_encode }}" style="margin-left: 200px"></div>
 {% endblock %}
