--- a/app/Resources/views/admin-v2/teach/open-course/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/open-course/index.html.twig
@@ -26,6 +26,8 @@
             <th>{{ 'admin.open_manage.manage.status_th'|trans }}</th>
             {% include 'org/parts/table-thead-tr.html.twig' %}
             <th>{{ 'admin.open_manage.manage.creator_th'|trans }}</th>
+            <th>{{ 'admin.open_manage.manage.live_num'|trans }}</th>
+            <th>{{ 'admin.open_manage.manage.hit_num'|trans }}</th>
             <th>{{ 'admin.open_manage.manage.operater_th'|trans }}</th>
         </tr>
         </thead>
