--- a/app/Resources/views/open-course/open-course-show.html.twig
+++ b/app/Resources/views/open-course/open-course-show.html.twig
@@ -17,7 +17,7 @@
   {% endif %}
 {% endblock %}
 
-{% do  script(['libs/jquery-validation.js', 'app/js/open-course/index.js']) %}
+{% do  script(['libs/jquery-validation.js', 'app/js/open-course/index.js', 'vue3/js/open-course/widget/open-course-detail/index.js']) %}
 
 {% block content %}
   <ol class="breadcrumb open-course-breadcrumb">
@@ -48,12 +48,8 @@
 
   <div class="open-course-detail row">
     <div class="col-md-9">
-      <div class="es-section gray-darker editor-text">
-        {% if course.about %}
-          {{ course.about|cdn|raw }}
-        {% else %}
-          <div class="empty">{{ 'my.teaching.open_course.show.about_empty'|trans }}</div>
-        {% endif %}
+      <div style="border-radius: 4px; border: 1px solid #e4ecf3; background: #fff; margin-bottom: 20px">
+        <div id="open-course-detail" data-course="{{ course | json_encode }}"></div>
       </div>
       {{ render(controller('AppBundle:OpenCourse:comment',{request:app.request,courseId:course.id, as:app.request.get('as')|default('')})) }}
     </div>
@@ -72,7 +68,6 @@
     'link': app.request.uri,
     'imgUrl': fileurl(course.largePicture,'course.png'),
   } %}
-  
+
   {% include 'common/anti-brush-captcha.html.twig' %}
 {% endblock %}
-    
