--- a/app/Resources/views/open-course/open-course-show.html.twig
+++ b/app/Resources/views/open-course/open-course-show.html.twig
@@ -49,9 +49,8 @@
   <div class="open-course-detail row">
     <div class="col-md-9">
       <div style="border-radius: 4px; border: 1px solid #e4ecf3; background: #fff; margin-bottom: 20px">
-        <div id="open-course-detail" data-course="{{ course | json_encode }}"></div>
+        <div id="open-course-detail" data-course="{{ course | json_encode }}" data-as="{{ app.request.get('as')|default('') }}"></div>
       </div>
-      {{ render(controller('AppBundle:OpenCourse:comment',{request:app.request,courseId:course.id, as:app.request.get('as')|default('')})) }}
     </div>
 
     <div class="col-md-3 hidden-sm hidden-xs">
