feat: #20241206 改造学员管理列表

--- a/app/Resources/views/course-manage/student/index.html.twig
+++ b/app/Resources/views/course-manage/student/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'course-manage/layout.html.twig' %}
 
 {% block title %}{{ 'course.members_manage'|trans }} - {{ course.title }} - {{ parent() }}{% endblock %}
+{% set course_side_nav = 'students' %}
 
 {% do script(['vue3/js/course-manage/students/index.js']) %}
 
