--- a/app/Resources/views/open-course/open-course-show.html.twig
+++ b/app/Resources/views/open-course/open-course-show.html.twig
@@ -28,7 +28,7 @@
   <div class="open-course-header">
     <div class="row">
 
-      {{ render(controller('AppBundle:OpenCourse:header',{course:course, lessonId:lessonId|default(null)})) }}
+      {{ render(controller('AppBundle:OpenCourse:header', {request: app.request, course: course, lessonId: lessonId|default(null)})) }}
 
       <div class="col-md-3 open-course-tab js-open-course-tab">
         <ul class="clearfix">
