--- a/app/Resources/views/open-course/open-course-show.html.twig
+++ b/app/Resources/views/open-course/open-course-show.html.twig
@@ -44,7 +44,7 @@
   </div>
   {# {% endcache %} #}
 
-  {{ render(controller('AppBundle:OpenCourse:infoBar',{courseId:course.id, as:app.request.get('as')|default('')})) }}
+  {{ render(controller('AppBundle:OpenCourse:infoBar', {courseId: course.id, lessonId: lessonId|default(null), as: app.request.get('as')|default('')})) }}
 
   <div class="open-course-detail row">
     <div class="col-md-9">
