feat: #108454 后台公开课列表显示课时数

--- a/app/Resources/views/admin-v2/teach/open-course/tr.html.twig
+++ b/app/Resources/views/admin-v2/teach/open-course/tr.html.twig
@@ -25,7 +25,7 @@
     <br>
     <span class="text-muted text-sm">{{ course.createdTime|date('Y-m-d H:i') }}</span>
   </td>
-  <td>-</td>
+  <td>{{ course.lessonNum }}</td>
   <td>{{ course.hitNum }}</td>
   <td>
     <div class="btn-group">
