--- a/app/Resources/views/open-course/mobile/open-course.html.twig
+++ b/app/Resources/views/open-course/mobile/open-course.html.twig
@@ -1,7 +1,9 @@
-{% do  script(['vue3/js/open-course/mobile/open-course/live-open-catalogue/index.js']) %}
+{% do  script(['vue3/js/open-course/mobile/open-course/live-open/index.js']) %}
 
 {% block content %}
-  {{ render(controller('AppBundle:OpenCourse:header',{request:app.request, course:course, lessonId:lessonId|default(null)})) }}
+  {% if course.type == 'open' %}
+    {{ render(controller('AppBundle:OpenCourse:header',{request:app.request, course:course, lessonId:lessonId|default(null)})) }}
+  {% endif %}
   {% set recommends = data('RecommendOpenCourses',{courseId:course.id,count:5}) %}
   {% if recommends %}
     <div class="panel panel-default open-course-panel">
@@ -28,6 +30,6 @@
   {% if course.type == 'open' %}
     {{ render(controller('AppBundle:OpenCourse:comment',{request:app.request,courseId:course.id, as:app.request.get('as')|default('')})) }}
   {% elseif course.type == 'liveOpen' %}
-    <div id="live-open-catalogue" data-course="{{ course | json_encode }}"></div>
+    <div id="live-open" data-course="{{ course | json_encode }}"></div>
   {% endif %}
 {% endblock %}
