--- a/app/Resources/views/open-course/mobile/open-course-header.html.twig
+++ b/app/Resources/views/open-course/mobile/open-course-header.html.twig
@@ -12,7 +12,7 @@
         <img class="img-responsive" src="{{ asset('assets/v2/img/mobile/opencourse-share.png') }}">
         <div class="metas">
           <p>{{ 'my.teaching.open_course.header.tips'|trans }}</p>
-          <a href="javascript:;" class="btn btn-lg open-course-btn">{{ 'my.teaching.open_course.header.understand_btn'|trans }}</a>
+          <a href="javascript:" class="btn btn-lg open-course-btn">{{ 'my.teaching.open_course.header.understand_btn'|trans }}</a>
         </div>
     </div>
   </div>
