--- a/app/Resources/views/live-course/entry.html.twig
+++ b/app/Resources/views/live-course/entry.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {%- block title -%}
-  {{'course.liveroom.content_title'|trans}}
+  {{ lesson.title | default('course.liveroom.content_title'|trans) }}
 {%- endblock -%}
 
 {% block meta %}
