fix: #108981 答题页面按钮样式重构

--- a/h5/src/h5/src/styles/components/item-engine/itembank.scss
+++ b/h5/src/h5/src/styles/components/item-engine/itembank.scss
@@ -478,7 +478,7 @@ $common-padding: 35;
 
 		.wap-icon {
 			display: block;
-			color: #919191;
+			color: #37393d;
 		}
 
 		.wap-icon-cuoti1-active {
